<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Secret Santa</string>

    <!-- Main .xml inpt field strings -->
    <string name="numPpl">Number of participants</string>
    <string name="p1">1</string>
    <string name="p2">2</string>
    <string name="p3">3</string>
    <string name="p4">4</string>
    <string name="p5">5</string>
    <string name="p6">6</string>
    <string name="p7">7</string>
    <string name="p8">8</string>
    <string name="p9">9</string>
    <string name="p10">10</string>

    <!-- Other strings in main .xml -->
    <string name="Enter">Enter</string>
    <string name="vader">Holiday Vader</string>

    <!-- Strings for Contact Info .xml -->
    <string name="phone">Phone Number</string>
    <string name="name0">Alice</string>
    <string name="name1">Bob</string>
    <string name="name2">Carol</string>
    <string name="name3">Dan</string>
    <string name="name4">Erin</string>
    <string name="name5">Frank</string>
    <string name="name6">Gena</string>
    <string name="name7">Heather</string>
    <string name="name8">John</string>
    <string name="name9">Karen</string>

</resources>